--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "animated-scroll-to": "^2.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
