--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-input-slider": "^6.0.1",
     "react-redux": "^7.2.6",
     "redux-thunk": "^2.4.1",
     "web3": "^1.6.1"
